--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -62,7 +62,7 @@
     width: 50%;
     height: 8px;
     border-radius: 50px;
-    background: linear-gradient(267deg,#DA7C25 -5.59%, #B923E1 100%);
+     background: linear-gradient(267deg,red -5.59%, #c205f7 100%);
 }
 
 
@@ -85,7 +85,7 @@
 .about-achievement h1{
     font-size: 55px;
     font-weight: 600;
-        background: linear-gradient(267deg,#DA7C25 -5.59%, #B923E1 100%);
+         background: linear-gradient(267deg,red -5.59%, #c205f7 100%);
 background-clip: text;
 -webkit-background-clip: text;
 -webkit-text-fill-color:transparent;
