--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -22,7 +22,7 @@
 
 
 .hero h1 span{
-    background: linear-gradient(267deg,#DA7C25 0.36%, #B923E1 100%);
+     background: linear-gradient(267deg,red -5.59%, #c205f7 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -50,7 +50,7 @@
 
 padding: 25px 45px;
 border-radius: 50px;
-    background: linear-gradient(267deg,#DA7C25 -5.59%, #B923E1 100%);
+     background: linear-gradient(267deg,red -5.59%, #c205f7 100%);
     cursor: pointer;
 
 
