--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -42,7 +42,7 @@
 .services-format h2{
     font-size: 36px;
     font-weight: 800;
-      background: linear-gradient(267deg,#DA7C25 -5.59%, #B923E1 100%);
+      background: linear-gradient(267deg,red -5.59%, #c205f7 100%);
 background-clip: text;
 -webkit-background-clip: text;
 -webkit-text-fill-color:transparent;
