--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -44,35 +44,83 @@
     padding: 27px 65px;
     transform: scale(1.05);
     transition: 0.4s;
-    border-color:  #B923E1;
+    border-color: #B923E1;
+}
+
+/* -------- Responsive Styles -------- */
+@media (max-width: 1200px) {
+    .mywork {
+        margin: 0 60px;
+    }
+
+    .mywork h1 {
+        font-size: 60px;
+    }
+
+    .mywork-container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .mywork-container img {
+        margin: 30px 0;
+    }
+
+    .mywork-showmore {
+        font-size: 20px;
+        padding: 23px 50px;
+    }
 }
 
 
-@media (max-width: 900px) {
+
+
+@media (max-width: 768px) {
     .mywork {
-        margin: 0 20px;
+        margin: 0 30px;
+    }
+
+    .mywork h1 {
+        font-size: 40px;
+    }
+
+.mywork-card img{
+    width: 75%;
+}
+    .mywork-container {
+        grid-template-columns: 1fr;
+    }
+
+    .mywork-showmore {
+        padding: 22px 45px;
+        font-size: 18px;
+    }
+}
+@media (max-width: 600px) {
+.mywork-card img{
+    
+    width: 90%;
+        height: auto;
+        margin: 20px 0;
+}
+}
+
+@media (max-width: 480px) {
+    .mywork {
+        margin: 0 15px;
     }
 
     .mywork h1 {
         font-size: 32px;
     }
 
-    .mywork-container {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-@media (max-width: 680px) {
-    .mywork-container {
-        grid-template-columns: 1fr;
-    }
-
-    .mywork h1 {
-        font-size: 28px;
+    .mywork-container img {
+        width: 100%;
+        height: auto;
+        margin: 20px 0;
     }
 
     .mywork-showmore {
-        padding: 20px 40px;
-        font-size: 18px;
+        padding: 20px 35px;
+        font-size: 16px;
     }
 }
